--- a/CGSSGuide/Base.lproj/Main.storyboard
+++ b/CGSSGuide/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13156.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13168.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13137.5"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13147.4"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -358,7 +358,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" usesAttributedText="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0n3-F6-Y4f">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" usesAttributedText="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0n3-F6-Y4f">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <attributedString key="attributedText">
@@ -470,8 +470,8 @@ For a better experience</string>
                                     <fragment content="Units">
                                         <attributes>
                                             <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <font key="NSFont" size="14" name=".SFNSText"/>
-                                            <font key="NSOriginalFont" size="14" name=".SFNSText"/>
+                                            <font key="NSFont" size="14" name=".AppleSystemUIFont"/>
+                                            <font key="NSOriginalFont" size="14" name=".AppleSystemUIFont"/>
                                             <integer key="NSUnderline" value="1"/>
                                         </attributes>
                                     </fragment>
@@ -479,24 +479,26 @@ For a better experience</string>
                                         <attributes>
                                             <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <font key="NSFont" size="14" name=".PingFangSC-Regular"/>
+                                            <font key="NSOriginalFont" size="14" name=".PingFangSC-Regular"/>
                                             <integer key="NSUnderline" value="1"/>
                                         </attributes>
                                     </fragment>
-                                    <fragment content=" ">
+                                    <fragment content=" Favorite Cards and Characters">
                                         <attributes>
                                             <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <font key="NSFont" metaFont="system" size="14"/>
+                                            <font key="NSFont" size="14" name=".AppleSystemUIFont"/>
+                                            <font key="NSOriginalFont" size="14" name=".AppleSystemUIFont"/>
+                                            <integer key="NSUnderline" value="1"/>
                                         </attributes>
                                     </fragment>
-                                    <fragment content="Favorite Cards and Characters">
+                                    <fragment content=".">
                                         <attributes>
-                                            <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <font key="NSFont" metaFont="system" size="14"/>
-                                            <integer key="NSUnderline" value="1"/>
+                                            <font key="NSOriginalFont" size="14" name=".AppleSystemUIFont"/>
                                         </attributes>
                                     </fragment>
                                     <fragment>
-                                        <string key="content">. The information that we request will be retained by us and used as described in this privacy policy.
+                                        <string key="content"> The information that we request will be retained by us and used as described in this privacy policy.
 
 The app does use third party services that may collect information used to identify you.
 
@@ -739,10 +741,10 @@ If you have any questions or suggestions about our Privacy Policy</string>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="0n3-F6-Y4f" secondAttribute="bottom" id="4oy-W4-vQX"/>
-                            <constraint firstItem="0n3-F6-Y4f" firstAttribute="leading" secondItem="19z-sH-Scw" secondAttribute="leading" id="Oau-c0-WHI"/>
-                            <constraint firstItem="0n3-F6-Y4f" firstAttribute="top" secondItem="19z-sH-Scw" secondAttribute="top" id="QFL-zN-K7Z"/>
-                            <constraint firstAttribute="trailing" secondItem="0n3-F6-Y4f" secondAttribute="trailing" id="t6w-y9-Lg6"/>
+                            <constraint firstItem="0n3-F6-Y4f" firstAttribute="leading" secondItem="19z-sH-Scw" secondAttribute="leading" id="5DB-6v-Gch"/>
+                            <constraint firstItem="0n3-F6-Y4f" firstAttribute="top" secondItem="19z-sH-Scw" secondAttribute="top" id="5Vl-1d-VRN"/>
+                            <constraint firstAttribute="trailing" secondItem="0n3-F6-Y4f" secondAttribute="trailing" id="YeD-xe-U4O"/>
+                            <constraint firstAttribute="bottom" secondItem="0n3-F6-Y4f" secondAttribute="bottom" id="v4b-7F-W2P"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -843,7 +845,7 @@ If you have any questions or suggestions about our Privacy Policy</string>
                         <viewControllerLayoutGuide type="top" id="qdf-q2-Z8T"/>
                         <viewControllerLayoutGuide type="bottom" id="TaQ-cT-OAD"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" id="6Ek-cq-sl0">
+                    <view key="view" contentMode="scaleToFill" id="6Ek-cq-sl0">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
