--- a/DereGuide/Base.lproj/Main.storyboard
+++ b/DereGuide/Base.lproj/Main.storyboard
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13178.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13189.4" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13156.2"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13165.3"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--设置-->
         <scene sceneID="s4U-8z-nuO">
             <objects>
-                <tableViewController id="3da-nI-rZF" customClass="SettingsTableViewController" customModule="CGSSGuide" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="3da-nI-rZF" customClass="SettingsTableViewController" customModule="DereGuide" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Tco-bQ-VW0">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -417,7 +418,7 @@ The terms used in this Privacy Policy have the same meanings as in our Terms and
                                         </attributes>
                                     </fragment>
                                     <fragment>
-                                        <string key="content"> which is accessible at CGSSGuide unless otherwise defined in this Privacy Policy.
+                                        <string key="content"> which is accessible at DereGuide unless otherwise defined in this Privacy Policy.
 
 </string>
                                         <attributes>
@@ -755,7 +756,7 @@ If you have any questions or suggestions about our Privacy Policy</string>
         <!--设置导航-->
         <scene sceneID="3UH-G6-k3Y">
             <objects>
-                <navigationController title="设置导航" id="Lc3-lA-ZOL" customClass="BaseNavigationController" customModule="CGSSGuide" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController title="设置导航" id="Lc3-lA-ZOL" customClass="BaseNavigationController" customModule="DereGuide" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="设置" image="740-gear.png" selectedImage="740-gear-selected.png" id="gI8-ss-NS6"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="PYk-Gh-Jnc">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -772,12 +773,13 @@ If you have any questions or suggestions about our Privacy Policy</string>
         <!--根标签栏-->
         <scene sceneID="6Yg-Ih-m8u">
             <objects>
-                <tabBarController storyboardIdentifier="RootTabBarController" title="根标签栏" automaticallyAdjustsScrollViewInsets="NO" id="Eme-MZ-6LK" customClass="RootTabBarController" customModule="CGSSGuide" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="RootTabBarController" title="根标签栏" automaticallyAdjustsScrollViewInsets="NO" id="Eme-MZ-6LK" customClass="RootTabBarController" customModule="DereGuide" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="2VQ-b1-GKR">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="selectedImageTintColor" name="Dance"/>
                     </tabBar>
                     <connections>
                         <segue destination="5Hs-jz-swe" kind="relationship" relationship="viewControllers" id="eSt-La-P0t"/>
@@ -794,21 +796,11 @@ If you have any questions or suggestions about our Privacy Policy</string>
         <!--工具-->
         <scene sceneID="8P3-YV-X5h">
             <objects>
-                <tableViewController title="工具" id="08b-yF-FVx" customClass="ToolboxTableViewController" customModule="CGSSGuide" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="工具" id="08b-yF-FVx" customClass="ToolboxTableViewController" customModule="DereGuide" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="68" sectionHeaderHeight="28" sectionFooterHeight="28" id="kTP-1s-QKZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="SQf-YJ-ZYU" customClass="ToolboxTableViewCell" customModule="CGSSGuide" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="68"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="SQf-YJ-ZYU" id="Iqa-Gp-dbH">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="67.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="08b-yF-FVx" id="8yc-8Y-GPW"/>
                             <outlet property="delegate" destination="08b-yF-FVx" id="xbl-d9-GB8"/>
@@ -823,7 +815,7 @@ If you have any questions or suggestions about our Privacy Policy</string>
         <!--组队导航-->
         <scene sceneID="3Ro-R5-hIA">
             <objects>
-                <navigationController title="组队导航" id="IyO-O4-iMn" customClass="BaseNavigationController" customModule="CGSSGuide" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController title="组队导航" id="IyO-O4-iMn" customClass="BaseNavigationController" customModule="DereGuide" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="组队" image="779-users.png" selectedImage="779-users-selected.png" id="Ji2-5n-2Mz"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="agS-1H-YQh">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -840,7 +832,7 @@ If you have any questions or suggestions about our Privacy Policy</string>
         <!--我的队伍-->
         <scene sceneID="ILv-7i-9nP">
             <objects>
-                <viewController id="GZS-2K-Fnc" customClass="TeamTableViewController" customModule="CGSSGuide" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="GZS-2K-Fnc" customClass="TeamTableViewController" customModule="DereGuide" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="qdf-q2-Z8T"/>
                         <viewControllerLayoutGuide type="bottom" id="TaQ-cT-OAD"/>
@@ -859,22 +851,12 @@ If you have any questions or suggestions about our Privacy Policy</string>
         <!--歌曲-->
         <scene sceneID="5me-Bd-loQ">
             <objects>
-                <tableViewController id="NCZ-z5-ATr" customClass="SongTableViewController" customModule="CGSSGuide" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="NCZ-z5-ATr" customClass="SongTableViewController" customModule="DereGuide" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="86" sectionHeaderHeight="28" sectionFooterHeight="28" id="ZgZ-l1-I3U">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SongCell" rowHeight="86" id="mBa-Fp-3R7" customClass="SongTableViewCell" customModule="CGSSGuide" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="86"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="mBa-Fp-3R7" id="dB4-rP-TGU">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="85.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="NCZ-z5-ATr" id="WpT-LU-ubX"/>
                             <outlet property="delegate" destination="NCZ-z5-ATr" id="MKW-ew-3hp"/>
@@ -889,7 +871,7 @@ If you have any questions or suggestions about our Privacy Policy</string>
         <!--歌曲导航-->
         <scene sceneID="kBj-5g-TfY">
             <objects>
-                <navigationController title="歌曲导航" id="KxG-H5-NIc" customClass="BaseNavigationController" customModule="CGSSGuide" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController title="歌曲导航" id="KxG-H5-NIc" customClass="BaseNavigationController" customModule="DereGuide" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="歌曲" image="898-music-note.png" selectedImage="898-music-note-selected.png" id="gE2-j0-zef">
                         <inset key="imageInsets" minX="0.0" minY="2" maxX="0.0" maxY="-2"/>
                     </tabBarItem>
@@ -908,7 +890,7 @@ If you have any questions or suggestions about our Privacy Policy</string>
         <!--卡片导航-->
         <scene sceneID="73S-hd-Baf">
             <objects>
-                <navigationController title="卡片导航" automaticallyAdjustsScrollViewInsets="NO" id="5Hs-jz-swe" customClass="BaseNavigationController" customModule="CGSSGuide" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController title="卡片导航" automaticallyAdjustsScrollViewInsets="NO" id="5Hs-jz-swe" customClass="BaseNavigationController" customModule="DereGuide" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="卡片" image="726-star.png" selectedImage="726-star-selected.png" id="8Lu-2l-B9T"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="TKb-dn-xix">
@@ -927,7 +909,7 @@ If you have any questions or suggestions about our Privacy Policy</string>
         <!--卡片-->
         <scene sceneID="wNd-5k-mcB">
             <objects>
-                <tableViewController title="卡片" id="hop-gk-wsV" customClass="CardTableViewController" customModule="CGSSGuide" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="卡片" id="hop-gk-wsV" customClass="CardTableViewController" customModule="DereGuide" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="YO4-wT-KNm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -946,7 +928,7 @@ If you have any questions or suggestions about our Privacy Policy</string>
         <!--工具导航-->
         <scene sceneID="x9V-Lw-SAR">
             <objects>
-                <navigationController title="工具导航" automaticallyAdjustsScrollViewInsets="NO" id="sAv-Q2-aG8" customClass="ToolboxNavigationController" customModule="CGSSGuide" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController title="工具导航" automaticallyAdjustsScrollViewInsets="NO" id="sAv-Q2-aG8" customClass="ToolboxNavigationController" customModule="DereGuide" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="工具" image="921-toolbox.png" selectedImage="921-toolbox-selected.png" id="wJt-PI-tVQ"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="B0B-4S-3iD">
@@ -974,5 +956,8 @@ If you have any questions or suggestions about our Privacy Policy</string>
         <image name="898-music-note.png" width="28" height="28"/>
         <image name="921-toolbox-selected.png" width="28" height="22"/>
         <image name="921-toolbox.png" width="28" height="22"/>
+        <namedColor name="Dance">
+            <color red="0.34901960784313724" green="0.73333333333333328" blue="0.85882352941176465" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
